<resources>
    <string name="app_name">Public Transport Direction</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="maps_fragment_label">Public Transport Direction</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="find_way">find</string>
    <string name="transport_header">Transport</string>
    <string name="airplane_title">Airplane</string>
    <string name="express_bus_title">Express Bus</string>
    <string name="rental_car_title">Rental car</string>
    <string name="railway_title">Railway</string>
    <string name="taxi_title">Taxi</string>
    <string name="kick_board_title">Kick Board</string>
    <string name="my_car_title">My Car</string>
    <string name="people_header">People</string>
    <string name="children_title">Children</string>
    <string name="disabled_title">The Disabled</string>
    <string name="walking_title">Walking</string>
    <string name="adult_title">How many adults</string>
    <string name="adult_count">How many adults</string>
    <string name="children_count">How many children</string>
    <string name="disabled_count">How many disabled</string>
</resources>